# newsletter

./: README.md  hsweb.cabal  newsletter.cabal
app/: Email.hs  Env.hs  Main.hs
app/Db/: Core.hs
frontend/: build.dev.mjs  package.json  packages.dhall  pnpm-lock.yaml  spago.dhall
frontend/src/: Main.purs  Markdown.js  Markdown.purs  index.js
frontend/static/: index.html  style.css
templates/: new_post.mustache  subscribed.mustache
