cabal-version:      3.6
name:               newsletter 
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
author: Srijan Paul

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: srijannr1@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable newsletter
    main-is:
      Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Db.Core

    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
      NoImplicitPrelude,
      OverloadedStrings,
      NumericUnderscores,
      GADTs,
      TypeApplications,
      DeriveGeneric,
      StandaloneDeriving,
      TypeFamilies,
      FlexibleInstances,
      FlexibleContexts
    build-depends:
      base>=4.16.4.0,
      sqlite-simple,
      relude,
      scotty,
      rapid,
      xdg-basedir,
      filepath,
      directory,
      time,
      mime-mail ^>= 0.5.1,
      mustache ^>= 2.4.2,
      email-validate ^>= 2.3.2.20,
      http-types,
      cryptonite

    hs-source-dirs:   app
    default-language: Haskell2010
